solved and stretch goal 1-2 complete;

--- a/style.css
+++ b/style.css
@@ -65,3 +65,13 @@ button {
 .row .cell:hover {
     background: lightsteelblue;
 }
+
+.red {
+    margin-top: 3px;
+    color: red;
+}
+
+.green {
+    margin-top: 3px;
+    color: green;
+}
